--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_introdução">Introdução</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Este espaço tem como objetivo documentar as atividades realizadas por mim e propostas pelo professor Agostinho Medeiros Brito Júnior durante a disciplina de Processamento Digital de Imagens. Aqui compartilho seus enunciados, a fundamentação teórica envolvida no problema, as soluções comentadas e implementadas por mim, bem como a saída em terminal UNIX.</p>
+<p>Este espaço tem como objetivo documentar as atividades realizadas por mim e propostas pelo professor Agostinho Medeiros Brito Júnior durante a disciplina de Processamento Digital de Imagens. Aqui compartilho os enunciados de cada atividade, a fundamentação teórica envolvida nos problemas, as soluções comentadas e implementadas por mim, bem como a saída em terminal UNIX.</p>
 </div>
 </div>
 </div>
@@ -458,7 +458,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-08-09 14:50:17 BRT
+Last updated 2017-08-09 17:36:18 BRT
 </div>
 </div>
 </body>
