--- a/index.html
+++ b/index.html
@@ -534,7 +534,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="_1_1_invertendo_cores_de_uma_região">1.1 Invertendo cores de uma região</h3>
 <div class="paragraph">
-<p>Este programa deverá ser capaz de receber como entrada dois pontos, \$\P_{1}\$ e \$\P_{2}\$ que compõem um retângulo de vértices opostos. O programa será capaz de criar o efeito de negativo  na região delimitada pelo usuário.</p>
+<p>O programa <a href="PDI/regions.cpp">regions</a> é capaz de receber como entrada dois pontos (\$\P_{1}\$ e \$\P_{2}\$)  que compõem um retângulo de vértices opostos. Essa região, em efeito negativo, é criada na imagem abaixo,.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="figures/regions.png" alt="regions">
+</div>
 </div>
 <div id="exa_hello" class="listingblock">
 <div class="title">regions.cpp</div>
@@ -626,8 +631,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 	<span class="tok-p">}</span>
 <span class="tok-k">else</span><span class="tok-p">{</span>
 	<span class="tok-n">cout</span><span class="tok-o">&lt;&lt;</span><span class="tok-s">&quot;Infelizmente voce nao escolheu pontos em vertices opostos.&quot;</span><span class="tok-o">&lt;&lt;</span><span class="tok-n">endl</span><span class="tok-p">;</span>
-<span class="tok-p">}</span>
-<span class="tok-k">return</span> <span class="tok-mi">0</span><span class="tok-p">;</span>
+<span class="tok-p">}</span><span class="tok-k">return</span> <span class="tok-mi">0</span><span class="tok-p">;</span>
 <span class="tok-p">}</span></code></pre>
 </div>
 </div>
@@ -637,7 +641,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-08-26 15:29:55 BRT
+Last updated 2017-09-04 12:26:12 BRT
 </div>
 </div>
 <script type="text/x-mathjax-config">
