--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_1_unidade_i">1. Unidade I</a>
 <ul class="sectlevel2">
 <li><a href="#_1_1_invertendo_cores_de_uma_região">1.1 Invertendo cores de uma região</a></li>
-<li><a href="#_1_1_invertendo_quadrantes_de_uma_imagem">1.1 Invertendo quadrantes de uma imagem</a></li>
+<li><a href="#_1_2_invertendo_quadrantes_de_uma_imagem">1.2 Invertendo quadrantes de uma imagem</a></li>
 </ul>
 </li>
 </ul>
@@ -532,15 +532,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect1">
 <h2 id="_1_unidade_i">1. Unidade I</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<div class="title">Imagens utilizadas:</div>
+<p><span class="image"><img src="./figures/biel.png" alt="biel"></span>
+<span class="image"><img src="./figures/bolhas.png" alt="role=right"></span></p>
+</div>
 <div class="sect2">
 <h3 id="_1_1_invertendo_cores_de_uma_região">1.1 Invertendo cores de uma região</h3>
 <div class="paragraph">
-<p>O programa <a href="PDI/regions.cpp">regions</a> é capaz de receber como entrada dois pontos (\$\P_{1}\$ e \$\P_{2}\$)  que compõem um retângulo de vértices opostos. Essa região, em efeito negativo, é criada na imagem abaixo.</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="figures/regions.png" alt="regions">
-</div>
+<p>O programa <a href="PDI/regions.cpp">regions</a> é capaz de receber como entrada dois pontos (\$\P_{1}\$ e \$\P_{2}\$)  que compõem um retângulo de vértices opostos. Essa região, em efeito negativo, é criada.</p>
 </div>
 <div id="exa_hello" class="listingblock">
 <div class="title">regions.cpp</div>
@@ -636,27 +636,19 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <span class="tok-p">}</span></code></pre>
 </div>
 </div>
+<div class="paragraph">
+<div class="title">Antes e depois:</div>
+<p><span class="image"><img src="./figures/biel.png" alt="biel"></span>
+<span class="image"><img src="./figures/regions.png" alt="role=right"></span></p>
+</div>
 </div>
 <div class="sect2">
-<h3 id="_1_1_invertendo_quadrantes_de_uma_imagem">1.1 Invertendo quadrantes de uma imagem</h3>
+<h3 id="_1_2_invertendo_quadrantes_de_uma_imagem">1.2 Invertendo quadrantes de uma imagem</h3>
 <div class="paragraph">
-<p>O programa <a href="PDI/trocaregioes.cpp">trocaregiões</a> é capaz de dividir a imagem em quatro partes.</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="figures/trocaregioesbefore.png" alt="trocaregioesbefore">
-</div>
-</div>
-<div class="paragraph">
-<p>Feito isso, o programa os inverte em diagonal.</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="figures/trocaregioes.png" alt="trocaregioes">
-</div>
+<p>O programa <a href="PDI/trocaregioes.cpp">trocaregiões</a> é capaz de dividir a imagem em quatro partes e inverter seus quadrantes em diagonal.</p>
 </div>
 <div id="exa" class="listingblock">
-<div class="title">regions.cpp</div>
+<div class="title">trocaregioes.cpp</div>
 <div class="content">
 <pre class="pygments highlight"><code data-lang="cpp"><span></span><span class="tok-cp">#include</span> <span class="tok-cpf">&lt;iostream&gt;</span><span class="tok-cp"></span>
 <span class="tok-cp">#include</span> <span class="tok-cpf">&lt;opencv2/opencv.hpp&gt;</span><span class="tok-cp"></span>
@@ -664,10 +656,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <span class="tok-cp">#include</span> <span class="tok-cpf">&lt;cv.h&gt;</span><span class="tok-cp"></span>
 <span class="tok-k">using</span> <span class="tok-k">namespace</span> <span class="tok-n">cv</span><span class="tok-p">;</span>
 <span class="tok-k">using</span> <span class="tok-k">namespace</span> <span class="tok-n">std</span><span class="tok-p">;</span>
-
 <span class="tok-kt">int</span> <span class="tok-nf">main</span><span class="tok-p">(</span><span class="tok-kt">int</span> <span class="tok-n">argc</span><span class="tok-p">,</span> <span class="tok-kt">char</span> <span class="tok-k">const</span> <span class="tok-o">*</span><span class="tok-n">argv</span><span class="tok-p">[])</span>
 <span class="tok-p">{</span>
-
 <span class="tok-n">Mat</span> <span class="tok-n">image</span> <span class="tok-p">;</span>
 <span class="tok-kt">int</span> <span class="tok-n">altura</span><span class="tok-p">,</span> <span class="tok-n">largura</span><span class="tok-p">;</span>
 <span class="tok-n">image</span><span class="tok-o">=</span><span class="tok-n">imread</span><span class="tok-p">(</span><span class="tok-s">&quot;biel.png&quot;</span><span class="tok-p">,</span><span class="tok-n">CV_LOAD_IMAGE_GRAYSCALE</span><span class="tok-p">);</span>
@@ -677,24 +667,28 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <span class="tok-n">altura</span> <span class="tok-o">=</span> <span class="tok-n">image</span><span class="tok-p">.</span><span class="tok-n">rows</span><span class="tok-p">;</span>
 <span class="tok-n">largura</span> <span class="tok-o">=</span> <span class="tok-n">image</span><span class="tok-p">.</span><span class="tok-n">cols</span><span class="tok-p">;</span>
 <span class="tok-n">cout</span><span class="tok-o">&lt;&lt;</span><span class="tok-s">&quot;ALTURA: &quot;</span><span class="tok-o">&lt;&lt;</span> <span class="tok-n">altura</span><span class="tok-o">&lt;&lt;</span><span class="tok-s">&quot; LARGURA: &quot;</span> <span class="tok-o">&lt;&lt;</span> <span class="tok-n">largura</span><span class="tok-o">&lt;&lt;</span><span class="tok-n">endl</span><span class="tok-p">;</span>
-
+<span class="tok-c1">//salvando trechos da imagem antiga em 4 matrizes diferentes.</span>
 <span class="tok-n">Mat</span> <span class="tok-n">imagem_final</span><span class="tok-p">(</span><span class="tok-n">altura</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-p">,</span><span class="tok-n">DataType</span><span class="tok-o">&lt;</span><span class="tok-n">uchar</span><span class="tok-o">&gt;::</span><span class="tok-n">type</span><span class="tok-p">);</span>
 <span class="tok-n">Mat</span> <span class="tok-n">A</span> <span class="tok-o">=</span> <span class="tok-n">image</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">));</span>
 <span class="tok-n">Mat</span> <span class="tok-n">B</span> <span class="tok-o">=</span> <span class="tok-n">image</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">));</span>
 <span class="tok-n">Mat</span> <span class="tok-n">C</span> <span class="tok-o">=</span> <span class="tok-n">image</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">));</span>
 <span class="tok-n">Mat</span> <span class="tok-n">D</span> <span class="tok-o">=</span> <span class="tok-n">image</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">));</span>
-
+<span class="tok-c1">//redistribuindo as partes copiadas da matriz antiga (foto origina) nos quadrantes da imagem final.</span>
 <span class="tok-n">A</span><span class="tok-p">.</span><span class="tok-n">copyTo</span><span class="tok-p">(</span><span class="tok-n">imagem_final</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">)));</span>
 <span class="tok-n">B</span><span class="tok-p">.</span><span class="tok-n">copyTo</span><span class="tok-p">(</span><span class="tok-n">imagem_final</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">)));</span>
 <span class="tok-n">C</span><span class="tok-p">.</span><span class="tok-n">copyTo</span><span class="tok-p">(</span><span class="tok-n">imagem_final</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">)));</span>
 <span class="tok-n">D</span><span class="tok-p">.</span><span class="tok-n">copyTo</span><span class="tok-p">(</span><span class="tok-n">imagem_final</span><span class="tok-p">(</span><span class="tok-n">Rect</span><span class="tok-p">(</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-mi">0</span><span class="tok-p">,</span><span class="tok-n">altura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">,</span><span class="tok-n">largura</span><span class="tok-o">/</span><span class="tok-mi">2</span><span class="tok-p">)));</span>
-
-
+<span class="tok-c1">//Criando a janela de exibição entitulada de janela_final</span>
 <span class="tok-n">imshow</span><span class="tok-p">(</span><span class="tok-s">&quot;janela_final&quot;</span><span class="tok-p">,</span><span class="tok-n">imagem_final</span><span class="tok-p">);</span>
-		<span class="tok-n">waitKey</span><span class="tok-p">();</span>
+<span class="tok-n">waitKey</span><span class="tok-p">();</span>
 <span class="tok-k">return</span> <span class="tok-mi">0</span><span class="tok-p">;</span>
 <span class="tok-p">}</span></code></pre>
 </div>
+</div>
+<div class="paragraph">
+<div class="title">Antes e depois:</div>
+<p><span class="image"><img src="./figures/trocaregioesbefore.png" alt="trocaregioesbefore"></span>
+<span class="image"><img src="./figures/trocaregioes.png" alt="256" width="256" height="role=right"></span></p>
 </div>
 </div>
 </div>
@@ -702,7 +696,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-08 05:13:05 BRT
+Last updated 2017-09-08 13:37:24 BRT
 </div>
 </div>
 <script type="text/x-mathjax-config">
