commit de segunda

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_1_2_invertendo_quadrantes_de_uma_imagem">1.2 Invertendo quadrantes de uma imagem</a></li>
 <li><a href="#_1_3_rotulando_e_realizando_contagem_de_objetos_pertencentes_a_uma_imagem">1.3 Rotulando e realizando contagem de objetos pertencentes a uma imagem</a></li>
 <li><a href="#_1_4_equalizador_de_histograma">1.4 Equalizador de histograma</a></li>
-<li><a href="#_1_6_filtro_especial_modificado">1.6 Filtro Especial modificado</a></li>
+<li><a href="#_1_6_filtro_espacial_modificado">1.6 Filtro Espacial modificado</a></li>
 <li><a href="#_1_7_tiltshift">1.7 TiltShift</a></li>
 </ul>
 </li>
@@ -896,7 +896,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect2">
-<h3 id="_1_6_filtro_especial_modificado">1.6 Filtro Especial modificado</h3>
+<h3 id="_1_6_filtro_espacial_modificado">1.6 Filtro Espacial modificado</h3>
 <div class="paragraph">
 <p>Para a implementação do <a href="PDI/laplgauss.cpp">laplgauss.cpp</a> utilizou-se como programa-base o arquivo <a href="PDI/filtroespacial.cpp">filtroespacial.cpp</a>. A proposta desse exercício é adicionar ao programa disponibilizado pelo professor a função de filtro Laplaciano Gaussiano da imagem capturada e compará-la com o Gaussiano da mesma.</p>
 </div>
@@ -1422,7 +1422,7 @@ O código do programa desenvolvido segue abaixo:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-11-05 12:41:25 BRT
+Last updated 2017-11-09 10:49:47 BRT
 </div>
 </div>
 <script type="text/x-mathjax-config">
